@@ -154,6 +154,9 @@
 	Fixed output formatting of :autocmd (pattern negation broke column
 	alignment and wrapping).
 
+	Fixed environment variables not being expanded on checking that a
+	:file[x]type or :fileviewer command exists.  Thanks to Ben Elan.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
